--- a/payment-processor/payment-processor.csproj
+++ b/payment-processor/payment-processor.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0"/>
   </ItemGroup>
 
 </Project>
