--- a/payment-processor/payment-processor.csproj
+++ b/payment-processor/payment-processor.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0"/>
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0" />
   </ItemGroup>
 
 </Project>
